# opengl-curves-explorer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  geomshapes2.cpp  geomshapes2.h  gl_app.cpp  gl_app.h  gl_window.cpp  gl_window.h  imguiparams_dialog.cpp  imguiparams_dialog.h  imguizmo_dialog.cpp  imguizmo_dialog.h  main.cpp
